--- a/proxy_server_config.yaml
+++ b/proxy_server_config.yaml
@@ -1,13 +1,15 @@
 model_list:
   - model_name: ultraai-dont-use
     litellm_params:
-      model: ollama/phi
-      api_base: https://localhost:8000
-      api_key: "sk-1234"
+      model: ollama/none
+      api_base: http://localhost:8000
+      api_key: does-not-work
 
 litellm_settings:
   drop_params: True
-
-general_settings: 
-
-environment_variables:
+  set_verbose: True
+  cache: True
+  cache_params:
+    type: redis-semantic
+    similarity_threshold: 0.8
+    redis_semantic_cache_embedding_model: semantic-cache-embedding-model
